Move all notes into main presentation